# ca-filefixer

./: .gitignore  Dockerfile  Procfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
templates/: index.html
