[tool.poetry]
name = "ca-filefixer"
version = "0.1.0"
description = ""
authors = ["Pablo Iaria <iariap@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
